# SyncLyrics

./: .gitignore  Cargo.toml  README.md  build.rs  io.github.onsah.SyncLyrics.json  meson.build
data/: com.github.onsah.SyncLyrics.desktop  com.github.onsah.SyncLyrics.gschema.xml  com.github.onsah.SyncLyrics.metainfo.xml  com.github.onsah.sync-lyrics.desktop  com.github.onsah.sync-lyrics.gschema.xml  meson.build
debian/: changelog  control  copyright  rules
meson/: cargo.sh
src/: app_state.rs  application.rs  configs.rs  listener.rs  main.rs  settings.rs  spotify_listener.rs  style.rs  ui.rs  utils.rs
src/lyrics/: genius.rs  happi.rs  mod.rs
src/spotify/: mod.rs  spotify_event.rs  spotify_event_producer.rs
src/widgets/: headerbar.rs  lyrics_view.rs  mod.rs
