[package]
name = "sync_lyrics"
version = "0.1.0"
authors = ["onur <sahinonur2000@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.9.2"
glib = "^0"
gio = "^0"
gdk = "^0"
restson = "^0.7"
serde = "^1.0"
serde_derive = "^1.0"
dbus = "0.9.1"
