[package]
name = "sync_lyrics"
version = "0.1.0"
authors = ["onur <sahinonur2000@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.9.2"
glib = "^0"
gio = "^0"
gdk = "^0"
gdk-pixbuf = "0.9.0"
image = "0.23.13"
serde = "^1.0"
serde_derive = "^1.0"
dbus = "0.9.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
futures = { version = "0.3", features = ["executor"] }
tokio-macros = "1.0.0"
tokio = { version = "1.1.0", features = ["macros"] }
scraper = "0.12.0"