install_data(
    'com.github.onsah.sync-lyrics.desktop',
    install_dir: join_paths(get_option('datadir'), 'applications'),
    rename: meson.project_name() + '.desktop'
)

install_data(
    'com.github.onsah.sync-lyrics.gschema.xml', 
    install_dir: join_paths(get_option ('datadir'), 'glib-2.0', 'schemas')
)