install_data(
    'com.github.onsah.SyncLyrics.desktop',
    install_dir: join_paths(get_option('prefix'), get_option('datadir'), 'applications'),
    rename: meson.project_name() + '.desktop'
)

install_data(
    'com.github.onsah.SyncLyrics.metainfo.xml',
    install_dir: join_paths(get_option('prefix'), get_option('datadir'), 'metainfo'),
)

install_data(
    'com.github.onsah.SyncLyrics.gschema.xml', 
    install_dir: join_paths(get_option ('datadir'), 'glib-2.0', 'schemas')
)